--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-
 flask==2.3.3
 mammoth==1.6.0
 Werkzeug==2.3.7
 python-docx==0.8.11
-Pillow==10.0.1
+Pillow==11.2.1
 beautifulsoup4==4.12.2
-lxml==4.9.3
+lxml
